Fix overflow on MGGG blog post

--- a/css/base.css
+++ b/css/base.css
@@ -23,7 +23,8 @@ body {
 }
 
 .content {
-  padding: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   max-width: 800px;
 }
 
@@ -33,14 +34,14 @@ body {
     text-align: left;
   }
   .container {
-    grid-template-columns: 200px 1fr;
+    grid-template-columns: 200px minmax(0, 1fr);
     overflow-y: hidden;
   }
 }
 
 @media (min-width: 1200px) {
   .container {
-    grid-template-columns: 300px 1fr;
+    grid-template-columns: 300px minmax(0, 1fr);
     overflow-y: hidden;
   }
 }
